--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+emotorad-task-aea5a30fae16.json
 # Miscellaneous
 *.class
 *.log
@@ -10,7 +11,6 @@
 .history
 .svn/
 .swiftpm/
-.assets/
 migrate_working_dir/
 
 # IntelliJ related
